@@ -4,14 +4,11 @@ import java.io.IOException;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import co.elastic.clients.elasticsearch._types.ElasticsearchException;
-import co.elastic.clients.elasticsearch.core.SearchResponse;
 import jake.pizza.pizza_reviews.dtos.PizzaReviewDTO;
-import jake.pizza.pizza_reviews.models.PizzaReview;
 import jake.pizza.pizza_reviews.repositories.PizzaRatingRepository;
 import jake.pizza.pizza_reviews.repositories.PizzaReviewRepository;
 
@@ -22,20 +19,17 @@ public class PizzaReviewServiceImpl implements PizzaReviewService {
 
     private final PizzaReviewRepository pizzaReviewRepository;
 
-    private final ElasticsearchClient elasticsearchClient;
-
     public PizzaReviewServiceImpl(PizzaRatingRepository pizzaRatingRepository, PizzaReviewRepository pizzaReviewRepository, ElasticsearchClient elasticsearchClient) {
         this.pizzaRatingRepository = pizzaRatingRepository;
         this.pizzaReviewRepository = pizzaReviewRepository;
-        this.elasticsearchClient = elasticsearchClient;
     }
 
     @Override
     public List<PizzaReviewDTO> findAll() {
-        return pizzaRatingRepository.findAll()
-                .stream()
-                .map(PizzaReviewDTO::new)
-                .toList();
+        return pizzaReviewRepository.findAll()
+            .stream()
+            .map(pizzaReview -> new PizzaReviewDTO(pizzaReview))
+            .collect(Collectors.toList());
     }
 
     @Override
@@ -46,32 +40,19 @@ public class PizzaReviewServiceImpl implements PizzaReviewService {
 
     @Override
     public List<PizzaReviewDTO> findReviewsByPizzaName(String pizzaName) {
-        return pizzaReviewRepository.findByPizzaName(pizzaName, PageRequest.of(0, 10))
+        return pizzaReviewRepository.searchByPizzaName(pizzaName)
             .stream()
-            .map(pr -> new PizzaReviewDTO(pr))
+            .map(pizzaReview -> new PizzaReviewDTO(pizzaReview))
             .collect(Collectors.toList());
     }
 
     @Override
     public List<PizzaReviewDTO> searchReviewsByKeyword(String keyword) throws ElasticsearchException, IOException {
-        SearchResponse<PizzaReview> elasticResponse = elasticsearchClient.search(s -> s
-            .index("pizza-reviews")
-            .query(q -> q
-                .match(t -> t
-                    .field("comment")
-                    .query(keyword)
-                )
-            ),
-            PizzaReview.class
-        );
-
-        return elasticResponse.hits().hits()
+        return pizzaReviewRepository.searchByComment(keyword)
             .stream()
-            .map(pizzaReviewHit -> new PizzaReviewDTO(pizzaReviewHit.source()))
+            .map(pizzaReview -> new PizzaReviewDTO(pizzaReview))
             .collect(Collectors.toList());
 
     }
-
-
 
 }
